Added more birds.

--- a/latex/bird_guide.tex
+++ b/latex/bird_guide.tex
@@ -35,32 +35,95 @@ This bird guide provides information about the birds found at the University of 
 % Bird sections
 \chapter{Birds}
 
-\section*{Bird Name 1}
-\textbf{Name:} Bird Name 1 \\
-\textbf{Size:} Medium \\
-\textbf{Field characters:} Description of field characters \\
-\textbf{Distribution:} Description of distribution \\
-\textbf{Habits:} Description of habits \\
-\textbf{Nesting:} Description of nesting \\
+\section*{Milvus migrans (Brown Kite)}
+\textbf{Name:} Brown Kite \\
+\textbf{Size:} Large (similar to a vulture) \\
+\textbf{Field characters:} A large bird of prey with a distinctive forked tail and long wings. The plumage is mostly brown with lighter underparts. \\
+\textbf{Distribution:} Found throughout the Indian subcontinent, including the University of Pune campus. \\
+\textbf{Habits:} Often seen soaring high in the sky, searching for prey. Feeds on small mammals, birds, and carrion. \\
+\textbf{Nesting:} Builds nests in tall trees, using sticks and other plant materials. \\
 \begin{flushright}
 \includegraphics[width=0.4\textwidth]{https://via.placeholder.com/150}
 \end{flushright}
 
 \newpage
 
-\section*{Bird Name 2}
-\textbf{Name:} Bird Name 2 \\
-\textbf{Size:} Small \\
-\textbf{Field characters:} Description of field characters \\
-\textbf{Distribution:} Description of distribution \\
-\textbf{Habits:} Description of habits \\
-\textbf{Nesting:} Description of nesting \\
+\section*{Accipiter badius (Shikra)}
+\textbf{Name:} Shikra \\
+\textbf{Size:} Medium (similar to a myna) \\
+\textbf{Field characters:} A small hawk with a distinctive red eye and a barred chest. The upperparts are gray, and the underparts are white with fine rufous barring. \\
+\textbf{Distribution:} Widely distributed across the Indian subcontinent, including the University of Pune campus. \\
+\textbf{Habits:} Prefers wooded areas and gardens. Feeds on small birds, mammals, and insects. \\
+\textbf{Nesting:} Builds nests in trees, using twigs and leaves. \\
 \begin{flushright}
 \includegraphics[width=0.4\textwidth]{https://via.placeholder.com/150}
 \end{flushright}
 
 \newpage
 
-% Add more bird sections as needed
+\section*{Amaurornis phoenicurus (White-breasted Waterhen)}
+\textbf{Name:} White-breasted Waterhen \\
+\textbf{Size:} Medium (similar to a bulbul) \\
+\textbf{Field characters:} A medium-sized bird with a white face, throat, and breast, and a dark brown body. It has a distinctive red patch on the base of its bill. \\
+\textbf{Distribution:} Found throughout the Indian subcontinent, including the University of Pune campus. \\
+\textbf{Habits:} Prefers marshy areas and wetlands. Feeds on insects, small fish, and plant matter. \\
+\textbf{Nesting:} Builds nests in dense vegetation near water, using plant materials. \\
+\begin{flushright}
+\includegraphics[width=0.4\textwidth]{https://via.placeholder.com/150}
+\end{flushright}
+
+\newpage
+
+\section*{Ardeola grayii (Indian Pond Heron)}
+\textbf{Name:} Indian Pond Heron \\
+\textbf{Size:} Medium (similar to a myna) \\
+\textbf{Field characters:} A medium-sized heron with a brownish body and white wings. It has a distinctive yellow bill and legs. \\
+\textbf{Distribution:} Found throughout the Indian subcontinent, including the University of Pune campus. \\
+\textbf{Habits:} Prefers wetlands, ponds, and marshes. Feeds on fish, frogs, and insects. \\
+\textbf{Nesting:} Builds nests in trees or shrubs near water, using sticks and plant materials. \\
+\begin{flushright}
+\includegraphics[width=0.4\textwidth]{https://via.placeholder.com/150}
+\end{flushright}
+
+\newpage
+
+\section*{Nycticorax nycticorax (Black-crowned Night Heron)}
+\textbf{Name:} Black-crowned Night Heron \\
+\textbf{Size:} Medium (similar to a crow) \\
+\textbf{Field characters:} A medium-sized heron with a black crown and back, gray wings, and white underparts. It has red eyes and a stout bill. \\
+\textbf{Distribution:} Found throughout the Indian subcontinent, including the University of Pune campus. \\
+\textbf{Habits:} Prefers wetlands, ponds, and marshes. Feeds on fish, frogs, and insects. \\
+\textbf{Nesting:} Builds nests in trees or shrubs near water, using sticks and plant materials. \\
+\begin{flushright}
+\includegraphics[width=0.4\textwidth]{https://via.placeholder.com/150}
+\end{flushright}
+
+\newpage
+
+\section*{Bubulcus ibis (Cattle Egret)}
+\textbf{Name:} Cattle Egret \\
+\textbf{Size:} Medium (similar to a myna) \\
+\textbf{Field characters:} A medium-sized egret with white plumage and a yellow bill. During the breeding season, it develops orange-buff plumes on its head, chest, and back. \\
+\textbf{Distribution:} Found throughout the Indian subcontinent, including the University of Pune campus. \\
+\textbf{Habits:} Often seen near cattle, feeding on insects and small animals disturbed by the grazing animals. \\
+\textbf{Nesting:} Builds nests in colonies, using sticks and plant materials. \\
+\begin{flushright}
+\includegraphics[width=0.4\textwidth]{https://via.placeholder.com/150}
+\end{flushright}
+
+\newpage
+
+\section*{Egretta garzetta (Little Egret)}
+\textbf{Name:} Little Egret \\
+\textbf{Size:} Medium (similar to a myna) \\
+\textbf{Field characters:} A medium-sized egret with white plumage, a black bill, and black legs with yellow feet. During the breeding season, it develops long, delicate plumes on its head, chest, and back. \\
+\textbf{Distribution:} Found throughout the Indian subcontinent, including the University of Pune campus. \\
+\textbf{Habits:} Prefers wetlands, ponds, and marshes. Feeds on fish, frogs, and insects. \\
+\textbf{Nesting:} Builds nests in colonies, using sticks and plant materials. \\
+\begin{flushright}
+\includegraphics[width=0.4\textwidth]{https://via.placeholder.com/150}
+\end{flushright}
+
+\newpage
 
 \end{document}
